# epictask

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SETUP.md  README.md  cloudbuild.yaml  docker-compose.yml  requirements.txt
app/: main.py  xrpl.py  xrpl_test.ipynb
app/.ipynb_checkpoints/: xrpl_test-checkpoint.ipynb
app/templates/: task_detail.html
resources/: ARCHITECTURE.md  DOCS.md
services/: service_list.md
services/adaptive_narrative_engine/: .gitignore  Dockerfile  README.md  api-test-page.html  pyproject.toml  requirements.txt
services/adaptive_narrative_engine/src/: __init__.py  main.py
services/adaptive_narrative_engine/src/adapters/: __init__.py  pubsub_publisher.py
services/adaptive_narrative_engine/src/config/: __init__.py  collection_names.py  firebase_config.py  security.py
services/adaptive_narrative_engine/src/domain/: __init__.py  models.py  validators.py
services/adaptive_narrative_engine/src/routes/: __init__.py  admin_stories.py  parent.py  payouts.py  progress.py  stories.py
services/adaptive_narrative_engine/src/services/: __init__.py  firestore.py  parent_service.py  payout_service.py  recommender_client.py  story_generator_service.py  story_templates.py  xrpl_client.py
services/adaptive_narrative_engine/src/tests/: __init__.py  test_models.py  test_payouts.py  test_pubsub.py  test_routes.py  test_validators.py
services/adaptive_narrative_engine/templates/: index.html
services/epictask-react/: .dockerignore  .gitignore  Dockerfile  app.json  eas.json  package-lock.json  package.json
(+500 files in other folders)
