[tool.poetry]
name = "adaptive-narrative-engine"
version = "0.1.0"
description = "Narrative-first financial literacy learning engine."
authors = ["Kai Technologies Corp."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.104.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
firebase-admin = ">=6.2.0"
google-cloud-firestore = ">=2.13.0"
google-cloud-pubsub = ">=2.18.0"
httpx = ">=0.25.0"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
python-multipart = ">=0.0.6"
python-dotenv = "^1.2.1"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.5.0"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
